--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -244,7 +244,7 @@
       <br/>
       <div class="row">
         <ng-container *ngFor="let sponsor of sponsors">
-          <ng-container *ngIf="level.$key === sponsor.level">
+          <ng-container *ngIf="level.id === sponsor.level">
             <span class="col-md-6" style="padding: 20px 40px; margin: 0 auto;">
               <a [href]="sponsor.websiteLink" target="_blank" rel="noopener">
                 <img [src]="sponsor.logoURL" class="sponsor-img" title="{{ sponsor.name }}" alt="{{ sponsor.name }}" />
