--- a/src/app/speakers/speaker-list/speaker-list.component.html
+++ b/src/app/speakers/speaker-list/speaker-list.component.html
@@ -14,7 +14,7 @@
           <img *ngIf="!speaker.photoURL" class="rounded-circle z-depth-1" style="background-image: url('../../../assets/img/user-default.png')">
           <img *ngIf="speaker.photoURL" class="rounded-circle z-depth-1" [ngStyle]="{'background-image': 'url(' + speaker.photoURL + ')'}">
         </div>
-        <button type="button" class="btn btn-sm btn-primary" *ngIf="authService.isLoggedIn && authService.isAdmin" routerLink="/speakers/{{ speaker.$key }}/edit">
+        <button type="button" class="btn btn-sm btn-primary" *ngIf="authService.isLoggedIn && authService.isAdmin" routerLink="/speakers/{{ speaker.id }}/edit">
           <i class="fa fa-pencil" aria-hidden="true"></i>
         </button>
         <button type="button" class="btn btn-sm btn-danger" *ngIf="authService.isLoggedIn && authService.isAdmin" (click)="deleteSpeaker(speaker)">
